<resources>
    <!-- Dados do Cliente. -->
    <string name="hint_cpf">CPF</string>
    <string name="hint_cnpj">CNPJ</string>
    <string name="app_aba_name">Ficha Cadastral</string>
    <string name="app_name">Smart Delivery</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hint_nome">Nome completo</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_nv_senha">Nova Senha</string>
    <string name="hint_rp_senha">Repita a Senha</string>
    <string name="hint_sa_senha">Senha antiga</string>
    <string name="hint_numero_celular">Número do celular</string>
    <string name="hint_CEP">CEP</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_numero">Número</string>
    <string name="hint_complemento">Complemento</string>
    <string name="hint_pais">País</string>
    <string name="hint_estado">Selecione um Estado</string>
    <string name="hint_rua">Rua</string>


    <string name="hint_placa_veiculo">Placa do Veículo</string>
    <string name="hint_marca_veiculo">Marca do Veículo</string>
    <string name="hint_modelo_veiculo">Modelo do Veículo</string>
    <string name="hint_titular_conta">Titular da conta</string>
    <string name="hint_documento_fiscal">CPF/ CNPJ</string>
    <string name="hint_banco">Banco</string>
    <string name="hint_agencia">Agência</string>
    <string name="hint_conta">Conta</string>
    <string name="hint_DigAgencia">Dígito</string>
    <string name="hint_DigConta">Dígito</string>

    <!-- Fim Dados do Cliente.  -->

    <string-array name="string_array_estados">
        <item>"*Estado"</item>
        <item>"Acre (AC)"</item>
        <item>"Alagoas (AL)"</item>
        <item>"Amapá (AP)"</item>
        <item>"Amazonas (AM)"</item>
        <item>"Bahia (BA)"</item>
        <item>"Ceará (CE)"</item>
        <item>"Distrito Federal (DF)"</item>
        <item>"Espírito Santo (ES)"</item>
        <item>"Goiás (GO)"</item>
        <item>"Maranhão (MA)"</item>
        <item>"Mato Grosso (MT)"</item>
        <item>"Mato Grosso do Sul (MS)"</item>
        <item>"Minas Gerais (MG)"</item>
        <item>"Pará (PA)"</item>
        <item>"Paraíba (PB)"</item>
        <item>"Paraná (PR)"</item>
        <item>"Pernambuco (PE)"</item>
        <item>"Piauí (PI)"</item>
        <item>"Rio de Janeiro (RJ)"</item>
        <item>"Rio Grande do Norte (RN)"</item>
        <item>"Rio Grande do Sul (RS)"</item>
        <item>"Rondônia (RO)"</item>
        <item>"Roraima (RR)"</item>
        <item>"Santa Catarina (SC)"</item>
        <item>"São Paulo (SP)"</item>
        <item>"Sergipe (SE)"</item>
        <item>"Tocantins (TO)"</item>
    </string-array>


    <string-array name="string_array_dias">
        <item>"*Dias da Semana"</item>
        <item>"Segunda-feira"</item>
        <item>"Terça-feira"</item>
        <item>"Quarta-feira"</item>
        <item>"Quinta-feira"</item>
        <item>"Sexta-feira"</item>
        <item>"Sabado"</item>
        <item>"Domingo"</item>
            </string-array>


    <string name="hint_cidade">Cidade</string>
    <string name="hint_bairro">Bairro</string>


    <!-- Mensagens.  -->
    <string name="error_msg_01">Erro ao tentar conexão</string>
    <string name="error_msg_02">Erro ao gravar valor</string>
    <string name="gps_error">Its necessary to enable the G.P.S. </string>
    <string name="error_msg_email">Email Inválido</string>
    <string name="error_msg_senha">Senha Inválida</string>
    <string name="error_msg_senharp">Senhas Diferem</string>
    <string name="error_msg_image">Imagem Inválida</string>
    <string name="error_msg_vazio">Campo não pode ser vazio</string>
    <string name="error_msg_invalido">Informação insuficiente</string>

    <string name="sucsses_msg_01">Usuário %1$s com email %2$s cadastrado com sucesso</string>
    <string name="sucsses_msg_02">Até breve %1$s</string>
    <string name="sucsses_msg_03">Estou disponível para realizar Entregas</string>
    <string name="sucsses_msg_04">Estou indisponível para realizar Entregas</string>


    <string name="option_dados">Editar dados</string>
'   <string name="option_entregas">Entregas</string>
    <string name="option_confirma">Confirmar</string>

    <string name="option_verificar">Verificar</string>
    <string name="option_log">Fazer Logout</string>

    <!-- Fim Mensagens.  -->

    <string name="expedienteInicio">Horário do início de expediente</string>
    <string name="expedienteFim">Horário do fim de expediente</string>
    <string name="expedienteSemana">Dias da semana</string>


</resources>
