<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LogInActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_dados"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/option_dados" />
        <item
            android:id="@+id/action_entregas"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/option_entregas" />
        <item
            android:id="@+id/action_historico"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/option_outros" />
        <item
            android:id="@+id/action_confirmacao"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="Confirmação de coleta/entrega" />
    </group>

    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/option_log" />
</menu>