<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative_Layout"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/relativeLayout2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INFORMAÇÕS DO VEÍCULO"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_horizontal_margin"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="18dp" />

            <EditText
                android:id="@+id/edt_placaVeiculo"
                android:hint="@string/hint_placa_veiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/textView"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_marginTop="12dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:id="@+id/edt_marca"
                android:hint="@string/hint_marca_veiculo"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_placaVeiculo"
                android:layout_alignLeft="@+id/edt_placaVeiculo"
                android:layout_alignStart="@+id/edt_placaVeiculo"
                android:layout_marginTop="9dp" />

            <EditText

                android:id="@+id/edt_modelo"
                android:hint="@string/hint_modelo_veiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edt_marca"
                android:layout_alignBottom="@+id/edt_marca"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:id="@+id/relativeLayout"
            android:layout_below="@+id/relativeLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/txtView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INFORMAÇÕS BANCÁRIAS"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_horizontal_margin"
                android:layout_marginTop="19dp"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp" />

            <EditText
                android:id="@+id/edt_titular"
                android:hint="@string/hint_titular_conta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_below="@+id/txtView2"
                android:layout_alignLeft="@+id/txtView2"
                android:layout_alignStart="@+id/txtView2"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/edt_banco"
                android:hint="@string/hint_banco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_below="@+id/edt_titular"
                android:layout_alignLeft="@+id/edt_titular"
                android:layout_alignStart="@+id/edt_titular"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/edt_agencia"
                android:hint="@string/hint_agencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="14dp"
                android:layout_below="@+id/edt_banco"
                android:layout_alignLeft="@+id/edt_banco"
                android:layout_alignStart="@+id/edt_banco"
                android:layout_alignRight="@+id/edt_banco"
                android:layout_alignEnd="@+id/edt_banco" />

            <EditText
                android:id="@+id/edt_conta"
                android:hint="@string/hint_conta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_alignBaseline="@+id/edt_agencia"
                android:layout_alignBottom="@+id/edt_agencia"
                android:layout_alignRight="@+id/edt_titular"
                android:layout_alignEnd="@+id/edt_titular" />

            <Button
                android:id="@+id/btn_Salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Salvar"
                android:layout_alignBaseline="@+id/btn_Cancelar"
                android:layout_alignBottom="@+id/btn_Cancelar"
                android:layout_toRightOf="@+id/txtView2"
                android:layout_toEndOf="@+id/txtView2"
                android:layout_marginRight="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#B0A9AE"
                android:shadowDx="0"
                android:shadowDy="-0"
                android:shadowRadius="5"/>

            <Button
                android:id="@+id/btn_Cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancelar"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/edt_conta"
                android:layout_toRightOf="@+id/edt_agencia"
                android:layout_toEndOf="@+id/edt_agencia"
                android:layout_marginTop="10dp"
                android:layout_marginRight="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#B0A9AE"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                />

        </RelativeLayout>


    </RelativeLayout>

</ScrollView>